styled .active to use the greyish-black as background

--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,6 @@
 
 /* Nav-Styling */
 .active {
-    background-color: #343a40;
-    color: #fff;
+    background-color: #343a40 !important;
+    color: #fff !important;
 }
