change cursor to pointer for stpl-class

--- a/Style.css
+++ b/Style.css
@@ -3,6 +3,10 @@
 
 }
 
+/* STPL Styling */
+.class {
+    cursor: pointer;
+}
 .class:hover {
     stroke: var(--gray-dark);
     stroke-width: 1px;
